Add press release blog post and posner case study to home page

--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -59,7 +59,6 @@ layout: default
     </div>
   </div>
 
-
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
@@ -72,9 +71,25 @@ layout: default
   </div>
 
   <div class="container">
+    <div class="section case-study">
+      <div class="row">
+        <div class="col s12 m4 project-cover">
+          <a href="https://www.fulcrum.org/concern/monographs/bz60cw269"><img class="responsive-img" src="//fulcrum.org/image-service/z029p4736/full/300,/0/default.jpg" alt="Cover for Director's Prism: E.T.A. Hoffman and the Russian Theatrical Avant-Garde" /></a>
+        </div>
+        <div class="col s12 m8 project-info">
+          <h3><a href="https://www.fulcrum.org/concern/monographs/bz60cw269">The Director's Prism: E.T.A. Hoffman and the Russian Theatrical Avant-Garde</a></h3>
+          <h4>Dassia N. Posner</h4>
+          <h5>Northwestern University Press, 2016</h5>
+          <p class="light"><em>The Director's Prism</em> investigates how and why three of Russia's most innovative directors— Vsevolod Meyerhold, Alexander Tairov, and Sergei Eisenstein—used the fantastical tales of German Romantic writer E. T. A. Hoffmann to reinvent the rules of theatrical practice. Fulcrum allowed Northwestern University Press to publish video clips of theatrical productions, an audio file, and additional full color images that can be viewed in more detail with Fulcrum's image viewer.</p>
+          <a href="https://www.fulcrum.org/concern/monographs/bz60cw269" id="button--get-updates" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="container">
       <div class="section services">
 
-        <!--   Cards Section   -->
         <div class="row">
           <div class="col s12 m6">
             <div class="icon-block">
@@ -97,7 +112,7 @@ layout: default
         </div>
 
       </div>
-    </div>
+    </div> -->
 
     <div class="parallax-container valign-wrapper">
       <div class="section no-pad-bot sponsor">
