--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -84,6 +84,18 @@ layout: default
           <a href="https://www.fulcrum.org/concern/monographs/bz60cw269" id="button--get-updates" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
         </div>
       </div>
+      <div class="row">
+        <div class="col s12 m4 project-cover">
+          <a href="https://www.fulcrum.org/concern/monographs/5999n3367"><img class="responsive-img" src="//fulcrum.org/image-service/fq977t77k/full/300,/0/default.jpg" alt="Cover for Canoes: A Natural History in North America" /></a>
+        </div>
+        <div class="col s12 m8 project-info">
+          <h3><a href="https://www.fulcrum.org/concern/monographs/5999n3367">Canoes: A Natural History in North America</a></h3>
+          <h4>Mark Neuzil and Norman Sims</h4>
+          <h5>University of Minnesota Press, 2016</h5>
+          <p class="light">This is the story of the canoe, that singular American artifact so little changed over time. Featured here are canoes old and new, from birch bark to dugout to carbon fiber; the people who made them; and the adventures they shared. Fulcrum allowed University of Minnesota Press to publish full color images that can be viewed in more detail with Fulcrum's image viewer.</p>
+          <a href="https://www.fulcrum.org/concern/monographs/5999n3367" id="button--get-updates" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
+        </div>
+      </div>
     </div>
   </div>
 
