tweak descriptive language

--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -92,7 +92,7 @@ layout: default
           <h3><a href="https://www.fulcrum.org/concern/monographs/5999n3367">Canoes: A Natural History in North America</a></h3>
           <h4>Mark Neuzil and Norman Sims</h4>
           <h5>University of Minnesota Press, 2016</h5>
-          <p class="light">This is the story of the canoe, that singular American artifact so little changed over time. Featured here are canoes old and new, from birch bark to dugout to carbon fiber; the people who made them; and the adventures they shared. Fulcrum allowed University of Minnesota Press to publish full color images that can be viewed in more detail with Fulcrum's image viewer.</p>
+          <p class="light"><em>Canoes: A Natural History</em> explores the cultural history of one of North America's totemic artifacts, featuring canoes old and new, from birch bark to dugout to carbon fiber; the people who made them; and the adventures they shared. Fulcrum allowed University of Minnesota Press to make all the images in the book available for more detailed viewing and investigation, while preserving these digital objects and their associated metadata in a repository environment.</p>
           <a href="https://www.fulcrum.org/concern/monographs/5999n3367" id="button--get-updates" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
         </div>
       </div>
