resolves a series of accessibility issues for fulcrum static pages

--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -81,7 +81,7 @@ layout: default
           <h4>Dassia N. Posner</h4>
           <h5>Northwestern University Press, 2016</h5>
           <p class="light"><em>The Director's Prism</em> investigates how and why three of Russia's most innovative directors— Vsevolod Meyerhold, Alexander Tairov, and Sergei Eisenstein—used the fantastical tales of German Romantic writer E. T. A. Hoffmann to reinvent the rules of theatrical practice. Fulcrum allowed Northwestern University Press to publish video clips of theatrical productions, an audio file, and additional full color images that can be viewed in more detail with Fulcrum's image viewer.</p>
-          <a href="https://www.fulcrum.org/concern/monographs/bz60cw269" id="button--get-updates" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
+          <a href="https://www.fulcrum.org/concern/monographs/bz60cw269" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
         </div>
       </div>
       <div class="row">
@@ -93,7 +93,7 @@ layout: default
           <h4>Mark Neuzil and Norman Sims</h4>
           <h5>University of Minnesota Press, 2016</h5>
           <p class="light"><em>Canoes: A Natural History</em> explores the cultural history of one of North America's totemic artifacts, featuring canoes old and new, from birch bark to dugout to carbon fiber; the people who made them; and the adventures they shared. Fulcrum allowed University of Minnesota Press to make all the images in the book available for more detailed viewing and investigation, while preserving these digital objects and their associated metadata in a repository environment.</p>
-          <a href="https://www.fulcrum.org/concern/monographs/5999n3367" id="button--get-updates" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
+          <a href="https://www.fulcrum.org/concern/monographs/5999n3367" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
         </div>
       </div>
     </div>
