--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -108,6 +108,18 @@ layout: default
           <a href="https://www.fulcrum.org/concern/monographs/br86b359j" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
         </div>
       </div>
+      <div class="row">
+        <div class="col s12 m4 project-cover">
+          <a href="https://www.fulcrum.org/concern/monographs/4q77fr33m"><img class="responsive-img" src="//fulcrum.org/image-service/qb98mf474/full/300,/0/default.jpg" alt="Cover for A Song to Save the Sailish Sea" /></a>
+        </div>
+        <div class="col s12 m8 project-info">
+          <h3><a href="https://www.fulcrum.org/concern/monographs/4q77fr33m">A Song to Save the Sailish Sea</a></h3>
+          <h4>Mark Pedelty</h4>
+          <h5>Indiana University Press, 2016</h5>
+          <p class="light">In this book, Mark Pedelty explores Cascadia's vibrant eco-musical community in order to understand how environmentalist music imagines, and perhaps even creates, a more sustainable conception of place. Fulcrum enabled Indiana University Press to make available several music videos and songs by well-known musician and environmental activist Dana Lyons.</p>
+          <a href="https://www.fulcrum.org/concern/monographs/4q77fr33m" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
+        </div>
+      </div>
     </div>
   </div>
 
