typo in alt text

--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -110,7 +110,7 @@ layout: default
       </div>
       <div class="row">
         <div class="col s12 m4 project-cover">
-          <a href="https://www.fulcrum.org/concern/monographs/4q77fr33m"><img class="responsive-img" src="//fulcrum.org/image-service/qb98mf474/full/300,/0/default.jpg" alt="Cover for A Song to Save the Sailish Sea: Musical Performance as Environmental Activism" /></a>
+          <a href="https://www.fulcrum.org/concern/monographs/4q77fr33m"><img class="responsive-img" src="//fulcrum.org/image-service/qb98mf474/full/300,/0/default.jpg" alt="Cover for A Song to Save the Salish Sea: Musical Performance as Environmental Activism" /></a>
         </div>
         <div class="col s12 m8 project-info">
           <h3><a href="https://www.fulcrum.org/concern/monographs/4q77fr33m">A Song to Save the Salish Sea: Musical Performance as Environmental Activism</a></h3>
