add fulcrum video and modify language before case studies

--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -23,6 +23,14 @@ layout: default
 
 <div class="container">
     <div class="section">
+      <!-- video -->
+      <div class="row center promo">
+        <div class="col s12 l8 offset-l2">
+          <div class="video widescreen">
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wsscKcoJN-8?rel=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
 
       <!--   Icon Section   -->
       <div class="row">
@@ -60,10 +68,10 @@ layout: default
   </div>
 
   <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
+    <div class="section no-pad-bot phases">
       <div class="container">
         <div class="row center">
-          <h2 class="header col s12 white-text">A rich integration of digital objects with books</h2>
+          <h2 class="header col s12 white-text">In its first phase the Fulcrum team has focused on providing branded companion websites for books. Now, in its second phase, it will expand to host complete ebook collections, journals, and new forms of multimodal publications.</h2>
         </div>
       </div>
     </div>
