Rebrand Hydra to Samvera in static HTML pages.

--- a/fulcrum/about.html
+++ b/fulcrum/about.html
@@ -16,7 +16,7 @@ permalink: /about/
 <p>Fulcrum provides the following advantages to authors:</p>
 
 <ul>
-  <li>Flexibility: Can present rich media files as well as text and images, and is adding support for more complex visualizations such as interactive models built in Unity3D. Being a node in the vibrant open source Hydra development community focused on the needs of the academy, Fulcrum is continually developing new capabilities relevant to authors.</li>
+  <li>Flexibility: Can present rich media files as well as text and images, and is adding support for more complex visualizations such as interactive models built in Unity3D. Being a node in the vibrant open source Samvera development community focused on the needs of the academy, Fulcrum is continually developing new capabilities relevant to authors.</li>
   <li>Durability: Built on an open source university infrastructure dedicated to providing durable long-term stewardship for digital objects. Each item (an image, a video or audio file, a visualization) receives a permanent digital identifier that allows it to be securely cited. Settings related to reuse are controlled by the creator.</li>
   <li>Discoverability: Through use of industry standards and relationships, ensures that digital scholarship is discoverable and that authors therefore receive metrics of impact and credit for their work, from download counts to altmetric scores. Integration into the information supply chain ensures that content published on Fulcrum appears in library catalogs and other important user access points, addressing the “discoverability challenge” that besets much born digital scholarship.</li>
 </ul>
@@ -25,7 +25,7 @@ permalink: /about/
 <p>Fulcrum provides the following advantages to publishers:</p>
 
 <ul>
-  <li>Flexibility: Hosted options are flexible, ranging from support for a single object to full presentation of a publisher’s complete list. The ability to represent new types of objects is continually being added through the efforts of the Hydra community. At the same time, processes and workflows are familiar to editors and other publishing production staff and are fully documented. Underlying code is available on an open source basis.</li>
+  <li>Flexibility: Hosted options are flexible, ranging from support for a single object to full presentation of a publisher’s complete list. The ability to represent new types of objects is continually being added through the efforts of the Samvera community. At the same time, processes and workflows are familiar to editors and other publishing production staff and are fully documented. Underlying code is available on an open source basis.</li>
   <li>Durability: Digital scholarship presents many preservation challenges. Fulcrum provides best-in-class, trusted solutions for long term preservation. Fedora underpinnings provide a durable infrastructure base, and digital scholarship published through Fulcrum is preserved by University of Michigan Library.</li>
   <li>Discoverability: All objects are made discoverable using stable identifiers, allowing integration with information supply chain vendors and other partners such as altmetric aggregators. Measurement of usage and impact is core to the platform’s design and the hosted service supports both access restricted and open access content.</li>
 </ul>
