--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -39,7 +39,7 @@ layout: default
             <h2 class="center brown-text icon"><i class="material-icons">timeline</i></h2>
             <h2 class="center">Flexible</h2>
 
-            <p class="light">By adopting an agile development approach and working in partnership with the Hydra open source community, Fulcrum is responsive to the changing needs of digital scholars.</p>
+            <p class="light">By adopting an agile development approach and working in partnership with the Samvera open source community, Fulcrum is responsive to the changing needs of digital scholars.</p>
           </div>
         </div>
 
@@ -152,7 +152,7 @@ layout: default
               <div class="center">
                 <img class="responsive-img" src="/img/fulcrum-scholar-350px.png" alt="Fulcrum Scholar">
               </div>
-              <p class="light"><strong>Fulcrum Scholar</strong> is a hosting environment with intuitive workflows that allow publishers to present collections of content with either public or restricted access. It is built on open source software developed within the Hydra/Fedora framework, widely used by libraries for repository development because of its stability and flexibility.</p>
+              <p class="light"><strong>Fulcrum Scholar</strong> is a hosting environment with intuitive workflows that allow publishers to present collections of content with either public or restricted access. It is built on open source software developed within the Samvera/Fedora framework, widely used by libraries for repository development because of its stability and flexibility.</p>
             </div>
           </div>
 
