add NYUP to homepage

--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -140,6 +140,18 @@ layout: default
           <a href="https://www.fulcrum.org/concern/monographs/rr171x24p" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
         </div>
       </div>
+      <div class="row">
+        <div class="col s12 m4 project-cover">
+          <a href="https://www.fulcrum.org/concern/monographs/w0892995q"><img class="responsive-img" src="//fulcrum.org/image-service/j098zb110/full/300,/0/default.jpg" alt="Cover for Show Sold Separately: Promos, Spoilers, and Other Media Paratexts" /></a>
+        </div>
+        <div class="col s12 m8 project-info">
+          <h3><a href="https://www.fulcrum.org/concern/monographs/w0892995q">Show Sold Separately: Promos, Spoilers, and Other Media Paratexts</a></h3>
+          <h4>Jonathan Gray</h4>
+          <h5>NYU Press, 2017</h5>
+          <p class="light"><em>Show Sold Separately</em> gives critical attention to the ubiquitous but often overlooked phenomenon of audiences approaching movies and TV shows with preconceived notions about them, shaped by the onslaught of information and hype that surround them. This book examines a wide range of materials from DVD bonus materials to action figures that reveal the world of film and television that exists before and after the show. New York University Press used Fulcrum to host the book’s impressive array of video clips and images that are embedded in the EPUB, which is available for reading in the <a href="http://openaccessbooks.nyupress.org/details/9780814731956/">New York University Press Open Access Books portal</a>. The videos are presented using AblePlayer, a fully-accessible cross-browser media player. Users are able to pan and zoom the images from within the e-reader, using the Leaflet viewer. Users are able to enjoy these media assets from the comfort of the e-reader environment, providing them an integrated, seamless reading experience.</p>
+          <a href="https://www.fulcrum.org/concern/monographs/w0892995q" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
+        </div>
+      </div>
     </div>
   </div>
 
