--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -27,7 +27,7 @@ layout: default
       <div class="row center promo">
         <div class="col s12 l8 offset-l2">
           <div class="video widescreen">
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wsscKcoJN-8?rel=0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wsscKcoJN-8?rel=0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -210,7 +210,7 @@ layout: default
             </div>
             <div class="row">
               <div class="col s10 m6 l4 offset-s1 offset-m3 offset-l4 center">
-                <button type="submit" value="Subscribe" class="btn-large button--lg waves-effect waves-light" type="submit" name="action">Sign Up
+                <button type="submit" value="Subscribe" class="btn-large button--lg waves-effect waves-light" name="action">Sign Up
                   <i class="material-icons right white-text sign-up">send</i>
                 </button>
               </div>
