Fixes #1291 Dupe titles in the toc.
Needed more specific xpath to get chapter titles from the toc and not
duplicate titles.

--- a/lib/spec/fixtures/fake_epub01_unpacked/EPUB/xhtml/nav.xhtml
+++ b/lib/spec/fixtures/fake_epub01_unpacked/EPUB/xhtml/nav.xhtml
@@ -14,5 +14,11 @@
 <li><a href="xhtml/Chapter03.xhtml">Mr. Crusher, ready a collision course with the Borg ship.</a></li>
 </ol>
 </nav>
+<nav epub:type="landmarks" id="guide">
+<h2>Guide</h2>
+<ol class="none">
+  <li><a href="xhtml/Chapter01.xhtml">Damage report!</a></li>
+</ol>
+</nav>
 </body>
 </html>
