Fixes #1324, move error pages to where rails expects them to be

--- a/fulcrum/404.html
+++ b/fulcrum/404.html
@@ -1,8 +1,10 @@
 ---
 layout: page
 title: 404 - The page you were looking for doesn't exist
+permalink: 404.html
 ---
-<div class="dialog">  
+<div class="dialog">
   <p>You may have mistyped the address or the page may have moved.</p>
+  <p>Fulcrum requires cookies to function correctly. Make sure you have cookies enabled in your browser.</p>
   <p>If you are the application owner check the logs for more information.</p>
 </div>
