--- a/fulcrum/422.html
+++ b/fulcrum/422.html
@@ -1,9 +1,11 @@
 ---
 layout: page
 title: 422 - The change you wanted was rejected
+permalink: 422.html
 ---
 
 <div class="dialog">
   <p>Maybe you tried to change something you didn't have access to.</p>
+  <p>Fulcrum requires cookies to function correctly. Make sure you have cookies enabled in your browser.</p>
   <p>If you are the application owner check the logs for more information.</p>
 </div>
