add partner logos; display on homepage; modify styles

--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -77,8 +77,71 @@ layout: default
     </div>
     <div class="parallax"><img src="/img/background-2.png" alt="Unsplashed background img 2"></div>
   </div>
-
   <div class="container">
+    <div class="section partners">
+      <div class="row">
+        <div class="col s12 m4">
+          <figure>
+            <a href="/heb">
+              <img src="/img/partners/heb.jpg" alt="ACLS Humanities E-Book Logo">
+            </a>
+          </figure>
+        </div>
+        <div class="col s12 m4">
+          <figure>
+            <a href="https://www.leverpress.org">
+              <img src="/img/partners/lever.png" alt="Lever Press Logo">
+            </a>
+          </figure>
+        </div>
+        <div class="col s12 m4">
+          <figure>
+            <a href="/michigan">
+              <img src="/img/partners/michigan.png" alt="University of Michigan Press">
+            </a>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 m4">
+          <figure>
+            <a href="/minnesota">
+              <img src="/img/partners/minnesota.png" alt="University of Minnesota Press Logo">
+            </a>
+          </figure>
+        </div>
+        <div class="col s12 m4">
+          <figure>
+            <a href="/northwestern">
+              <img src="/img/partners/northwestern.png" alt="Northwestern University Press Logo">
+            </a>
+          </figure>
+        </div>
+        <div class="col s12 m4">
+          <figure>
+            <a href="/pennstate">
+              <img src="/img/partners/pennstate.png" alt="Penn State University Press Logo">
+            </a>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 m6">
+          <figure>
+            <a href="/nyupress">
+              <img src="/img/partners/nyupress.png" alt="NYU Press Logo">
+            </a>
+          </figure>
+        </div>
+        <div class="col s12 m6">
+          <figure>
+            <a href="/indiana">
+              <img src="/img/partners/indiana.png" alt="Indiana University Press Logo">
+            </a>
+          </figure>
+        </div>
+      </div>
+    </div>
     <div class="section case-study">
       <div class="row">
         <div class="col s12 m4 project-cover">
@@ -117,7 +180,7 @@ layout: default
           <a href="https://www.fulcrum.org/concern/monographs/bz60cw269" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col s12 m4 project-cover">
           <a href="https://www.fulcrum.org/concern/monographs/5999n3367"><img class="responsive-img" src="//fulcrum.org/image-service/fq977t77k/full/300,/0/default.jpg" alt="Cover for Canoes: A Natural History in North America" /></a>
         </div>
@@ -177,7 +240,7 @@ layout: default
           <p class="light">In 1965 the drive for black voting rights in the south culminated in the epic Selma to Montgomery Freedom March. Within hours after that historic march, klan terror struck, claiming the life of one of the marchers, Viola Liuzzo, a Detroit mother of five. Turner offers an insider’s view of the three trials that took place over the following nine months -- which finally resulted in the conviction of the killers. On Fulcrum, one can explore multiple court documents, including court transcripts, exhibits, and memoranda to get a better, deeper understanding about this historic case and the times in which it was tried.</p>
           <a href="https://www.fulcrum.org/concern/monographs/fj2362114" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 
