--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -79,25 +79,26 @@ layout: default
   </div>
   <div class="container">
     <div class="section partners">
+      <h2>Partners</h2>
       <div class="row">
         <div class="col s12 m4">
           <figure>
             <a href="/heb">
-              <img src="/img/partners/heb.jpg" alt="ACLS Humanities E-Book Logo">
+              <img class="square" src="/img/partners/heb.jpg" alt="ACLS Humanities E-Book Logo">
             </a>
           </figure>
         </div>
         <div class="col s12 m4">
           <figure>
-            <a href="https://www.leverpress.org">
-              <img src="/img/partners/lever.png" alt="Lever Press Logo">
+            <a href="/northwestern">
+              <img class="square" src="/img/partners/northwestern.png" alt="Northwestern University Press Logo">
             </a>
           </figure>
         </div>
         <div class="col s12 m4">
           <figure>
-            <a href="/michigan">
-              <img src="/img/partners/michigan.png" alt="University of Michigan Press">
+            <a href="/pennstate">
+              <img class="square" src="/img/partners/pennstate.png" alt="Penn State University Press Logo">
             </a>
           </figure>
         </div>
@@ -106,21 +107,21 @@ layout: default
         <div class="col s12 m4">
           <figure>
             <a href="/minnesota">
-              <img src="/img/partners/minnesota.png" alt="University of Minnesota Press Logo">
+              <img class="vertical" src="/img/partners/minnesota.png" alt="University of Minnesota Press Logo">
             </a>
           </figure>
         </div>
         <div class="col s12 m4">
           <figure>
-            <a href="/northwestern">
-              <img src="/img/partners/northwestern.png" alt="Northwestern University Press Logo">
+            <a href="https://www.leverpress.org">
+              <img class="vertical" src="/img/partners/lever.png" alt="Lever Press Logo">
             </a>
           </figure>
         </div>
         <div class="col s12 m4">
           <figure>
-            <a href="/pennstate">
-              <img src="/img/partners/pennstate.png" alt="Penn State University Press Logo">
+            <a href="/michigan">
+              <img class="vertical" src="/img/partners/michigan.png" alt="University of Michigan Press">
             </a>
           </figure>
         </div>
@@ -142,7 +143,9 @@ layout: default
         </div>
       </div>
     </div>
+    <hr class="brand" />
     <div class="section case-study">
+      <h2>Case Studies</h2>
       <div class="row">
         <div class="col s12 m4 project-cover">
           <a href="https://www.fulcrum.org/concern/monographs/n009w229r"><img class="responsive-img" src="//fulcrum.org/image-service/m900nt438/full/300,/0/default.jpg" alt="Cover for A Mid-Republican House from Gabii" /></a>
