HELIO-1751 - modify headings on asset page and homepage to address accessibility issues; add relevant styles to maintain same look with the now correct markup

--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -5,10 +5,9 @@ layout: default
 <div id="index-banner" class="parallax-container">
   <div class="section no-pad-bot">
     <div class="container">
-        <br><br>
-        <h1 class="header center zeta">Optimize your scholarship</h1>
+        <p class="header center zeta">Optimize your scholarship</p>
         <div class="row center">
-          <p class="header col s12 white-text gamma">Fulcrum is a publishing platform currently under development that helps publishers present the full richness of their authors' research outputs in a durable, discoverable, and flexible form.</p>
+          <p class="col s12 white-text gamma">Fulcrum is a publishing platform currently under development that helps publishers present the full richness of their authors' research outputs in a durable, discoverable, and flexible form.</p>
         </div>
         <div class="row center">
           <a href="#get-updates" id="button--get-updates" class="btn-large button--lg waves-effect waves-light lighten-1">Get Updates</a>
@@ -23,6 +22,7 @@ layout: default
 
 <div class="container">
     <div class="section">
+      <h2 class="u-screenreader">Overview</h2>
       <!-- video -->
       <div class="row center promo">
         <div class="col s12 l8 offset-l2">
@@ -36,8 +36,8 @@ layout: default
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text icon"><i class="material-icons">timeline</i></h2>
-            <h2 class="center">Flexible</h2>
+            <span class="center brown-text icon"><i class="material-icons">timeline</i></span>
+            <span class="center value">Flexible</span>
 
             <p class="light">By adopting an agile development approach and working in partnership with the Samvera open source community, Fulcrum is responsive to the changing needs of digital scholars.</p>
           </div>
@@ -45,8 +45,8 @@ layout: default
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text icon"><i class="material-icons">link</i></h2>
-            <h2 class="center">Durable</h2>
+            <span class="center brown-text icon"><i class="material-icons">link</i></span>
+            <span class="center value">Durable</span>
 
             <p class="light">Built on research university library infrastructure specifically designed to curate digital objects, Fulcrum is a trusted steward committed to preservation and stability.</p>
           </div>
@@ -54,10 +54,10 @@ layout: default
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text icon"><i class="material-icons">location_searching</i></h2>
+            <span class="center brown-text icon"><i class="material-icons">location_searching</i></span>
             <!-- <h2 class="center brown-text icon"><i class="material-icons">find_in_page</i></h2> -->
             <!-- <h2 class="center brown-text icon"><i class="material-icons">center_focus_strong</i></h2> -->
-            <h2 class="center">Discoverable</h2>
+            <span class="center value">Discoverable</span>
 
             <p class="light">Interoperable with other publishing tools and integrated into the information supply chain, Fulcrum ensures that content is discovered by readers and impact is tracked.</p>
           </div>
@@ -71,7 +71,7 @@ layout: default
     <div class="section no-pad-bot phases">
       <div class="container">
         <div class="row center">
-          <h2 class="header col s12 white-text">In its first phase the Fulcrum team has focused on providing branded companion websites for books. Now, in its second phase, it will expand to host complete ebook collections, journals, and new forms of multimodal publications.</h2>
+          <div class="header col s12 white-text"><p class="blurb">In its first phase the Fulcrum team has focused on providing branded companion websites for books. Now, in its second phase, it will expand to host complete ebook collections, journals, and new forms of multimodal publications.</p></div>
         </div>
       </div>
     </div>
@@ -152,8 +152,8 @@ layout: default
         </div>
         <div class="col s12 m8 project-info">
           <h3><a href="https://www.fulcrum.org/concern/monographs/n009w229r">A Mid-Republican House from Gabii</a></h3>
-          <h4>Rachel Opitz, Marcello Mogetta, and Nicola Terrenato, Editors</h4>
-          <h5>University of Michigan Press, 2016</h5>
+          <span class="author">Rachel Opitz, Marcello Mogetta, and Nicola Terrenato, Editors</span>
+          <span class="pubdate">University of Michigan Press, 2016</span>
 	  <p class="light">Since 2009 the Gabii Project, an international archaeological initiative led by Nicola Terrenato and the University of Michigan, has been investigating the ancient Latin town of Gabii, which was both a neighbor of, and a rival to, Rome in the first millennium BCE. The trajectory of Gabii, from an Iron Age settlement to a flourishing mid-Republican town to an Imperial agglomeration widely thought to be in decline, provides a new perspective on the dynamics of settlement in central Italy. <em>A Mid-Republican House from Gabii</em> focuses on the construction, inhabitation, and repurposing of a private home at Gabii, built in the mid-Republican period. Published in digital form as a website backed up by a detailed database, the publication provides a synthesis of excavation results linked to the relevant spatial, descriptive, and quantitative data. Fulcrum brings together the database, narrative, and interactive 3D model of the reconstructed ancient site to give the user a seamless reading experience, presenting the narrative and 3D model side by side and including comprehensive linking throughout all components enabling the reader to move through the project in a number of ways.
           </p>
           <a href="https://www.fulcrum.org/concern/monographs/n009w229r" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
@@ -165,8 +165,8 @@ layout: default
         </div>
         <div class="col s12 m8 project-info">
           <h3><a href="https://www.fulcrum.org/concern/monographs/w0892995q">Show Sold Separately: Promos, Spoilers, and Other Media Paratexts</a></h3>
-          <h4>Jonathan Gray</h4>
-          <h5>NYU Press, 2017</h5>
+          <span class="author">Jonathan Gray</span>
+          <span class="pubdate">NYU Press, 2017</span>
           <p class="light"><em>Show Sold Separately</em> gives critical attention to the ubiquitous but often overlooked phenomenon of audiences approaching movies and TV shows with preconceived notions about them, shaped by the onslaught of information and hype that surround them. This book examines a wide range of materials from DVD bonus materials to action figures that reveal the world of film and television that exists before and after the show. New York University Press used Fulcrum to host the book’s impressive array of video clips and images that are embedded in the EPUB, which is available for reading in the <a href="http://openaccessbooks.nyupress.org/details/9780814731956/">New York University Press Open Access Books portal</a>. The videos are presented using AblePlayer, a fully-accessible cross-browser media player. Users are able to pan and zoom the images from within the e-reader, using the Leaflet viewer. Users are able to enjoy these media assets from the comfort of the e-reader environment, providing them an integrated, seamless reading experience.</p>
           <a href="https://www.fulcrum.org/concern/monographs/w0892995q" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
         </div>
@@ -177,8 +177,8 @@ layout: default
         </div>
         <div class="col s12 m8 project-info">
           <h3><a href="https://www.fulcrum.org/concern/monographs/bz60cw269">The Director's Prism: E.T.A. Hoffman and the Russian Theatrical Avant-Garde</a></h3>
-          <h4>Dassia N. Posner</h4>
-          <h5>Northwestern University Press, 2016</h5>
+          <span class="author">Dassia N. Posner</span>
+          <span class="pubdate">Northwestern University Press, 2016</span>
           <p class="light"><em>The Director's Prism</em> investigates how and why three of Russia's most innovative directors— Vsevolod Meyerhold, Alexander Tairov, and Sergei Eisenstein—used the fantastical tales of German Romantic writer E. T. A. Hoffmann to reinvent the rules of theatrical practice. Fulcrum allowed Northwestern University Press to publish video clips of theatrical productions, an audio file, and additional full color images that can be viewed in more detail with Fulcrum's image viewer.</p>
           <a href="https://www.fulcrum.org/concern/monographs/bz60cw269" class="btn-large button--lg waves-effect waves-light lighten-1">View Project</a>
         </div>
@@ -276,9 +276,10 @@ layout: default
 
     <div class="parallax-container valign-wrapper">
       <div class="section no-pad-bot sponsor">
+        <h2 class="u-screenreader">Development</h2>
         <div class="container">
           <div class="row center">
-            <p class="header col s12 white-text gamma">Fulcrum is being developed by a group of campus-based publishers working closely with disciplinary faculty and information science specialists who recognize the changing nature of scholarly publishing in the humanities and qualitative social sciences. Initial development has been supported by a generous grant from the Andrew W. Mellon Foundation and implemented by the University of Michigan Library and Press working with partners from Indiana, Minnesota, Northwestern, and Penn State universities. <a href="/about/" title="Read more about Fulcrum">Read more...</a></p>
+            <p class="col s12 white-text gamma">Fulcrum is being developed by a group of campus-based publishers working closely with disciplinary faculty and information science specialists who recognize the changing nature of scholarly publishing in the humanities and qualitative social sciences. Initial development has been supported by a generous grant from the Andrew W. Mellon Foundation and implemented by the University of Michigan Library and Press working with partners from Indiana, Minnesota, Northwestern, and Penn State universities. <a class="underline" href="/about/" title="Read more about Fulcrum">Read more...</a></p>
           </div>
         </div>
       </div>
